nav menu on mobile view css

--- a/index.html
+++ b/index.html
@@ -21,18 +21,49 @@
       <nav>
         <img src="./images/logo.svg" alt="snap-logo" />
         <img src="./images/icon-menu.svg" alt="menu" height="16" />
-        <ul>
-          <li>Features</li>
-          <li>Company</li>
-          <li>Careers</li>
-          <li></li>
-          <li>About</li>
-        </ul>
-        <ul>
-          <li>Login</li>
-          <li>Register</li>
-        </ul>
+        <div class="md-menu">
+          <ul>
+            <li>Features</li>
+            <li>Company</li>
+            <li>Careers</li>
+            <li></li>
+            <li>About</li>
+          </ul>
+          <ul>
+            <li>Login</li>
+            <li>Register</li>
+          </ul>
+        </div>
       </nav>
+
+      <div class="sm-menu">
+        <div class="menu">
+          <img src="./images/icon-close-menu.svg" alt="close-menu" />
+          <ul>
+            <li>
+              Features <span><img src="./images/icon-arrow-down.svg" /></span>
+            </li>
+            <ul class="inner-menu">
+              <li><img src="./images/icon-todo.svg" /> Todo List</li>
+              <li><img src="./images/icon-calendar.svg" /> Calendar</li>
+              <li><img src="./images/icon-reminders.svg" />Reminders</li>
+              <li><img src="./images/icon-planning.svg" /> Planning</li>
+            </ul>
+            <li>Company <img src="./images/icon-arrow-down.svg" alt="." /></li>
+            <ul class="inner-menu">
+              <li>History</li>
+              <li>Our Team</li>
+              <li>Blog</li>
+            </ul>
+            <li>Careers</li>
+            <li>About</li>
+            <div>
+              <li>Login</li>
+              <li>Register</li>
+            </div>
+          </ul>
+        </div>
+      </div>
 
       <div class="hero"></div>
       <section>
