created javascript file

--- a/index.html
+++ b/index.html
@@ -83,5 +83,6 @@
         <img src="./images/client-maker.svg" alt="make" />
       </div>
     </main>
+    <script src="./index.js"></script>
   </body>
 </html>
