toggle menu on mobile screen

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
     <main>
       <nav>
         <img src="./images/logo.svg" alt="snap-logo" />
-        <img src="./images/icon-menu.svg" alt="menu" height="16" />
+        <img
+          src="./images/icon-menu.svg"
+          alt="menu"
+          height="16"
+          class="menu-icon"
+        />
         <div class="md-menu">
           <ul>
             <li>Features</li>
@@ -38,18 +43,20 @@
 
       <div class="sm-menu">
         <div class="menu">
-          <img src="./images/icon-close-menu.svg" alt="close-menu" />
+          <img
+            src="./images/icon-close-menu.svg"
+            alt="close-menu"
+            class="close-menu"
+          />
           <ul>
-            <li>
-              Features <span><img src="./images/icon-arrow-down.svg" /></span>
-            </li>
+            <li class="features">Features</li>
             <ul class="inner-menu">
               <li><img src="./images/icon-todo.svg" /> Todo List</li>
               <li><img src="./images/icon-calendar.svg" /> Calendar</li>
               <li><img src="./images/icon-reminders.svg" />Reminders</li>
               <li><img src="./images/icon-planning.svg" /> Planning</li>
             </ul>
-            <li>Company <img src="./images/icon-arrow-down.svg" alt="." /></li>
+            <li class="company">Company</li>
             <ul class="inner-menu">
               <li>History</li>
               <li>Our Team</li>
