--- a/index.html
+++ b/index.html
@@ -72,22 +72,24 @@
         </div>
       </div>
 
-      <div class="hero"></div>
-      <section>
-        <h1>Make remote work</h1>
+      <div class="content">
+        <div class="hero"></div>
+        <section>
+          <h1>Make remote work</h1>
 
-        <p>
-          Get your team in sync, no matter your location. Streamline processes,
-          create team rituals, and watch productivity soar.
-        </p>
+          <p>
+            Get your team in sync, no matter your location. Streamline
+            processes, create team rituals, and watch productivity soar.
+          </p>
 
-        <a href="#">Learn more</a>
-      </section>
-      <div class="clients">
-        <img src="./images/client-databiz.svg" alt="data-biz" />
-        <img src="./images/client-audiophile.svg" alt="audiophile" />
-        <img src="./images/client-meet.svg" alt="meet" />
-        <img src="./images/client-maker.svg" alt="make" />
+          <a href="#">Learn more</a>
+        </section>
+        <div class="clients">
+          <img src="./images/client-databiz.svg" alt="data-biz" />
+          <img src="./images/client-audiophile.svg" alt="audiophile" />
+          <img src="./images/client-meet.svg" alt="meet" />
+          <img src="./images/client-maker.svg" alt="make" />
+        </div>
       </div>
     </main>
     <script src="./index.js"></script>
