menu expanded on desktop screen implementation

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <main>
       <nav>
-        <img src="./images/logo.svg" alt="snap-logo" />
+        <img src="./images/logo.svg" alt="snap-logo" class="logo" />
         <img
           src="./images/icon-menu.svg"
           alt="menu"
@@ -36,10 +36,23 @@
             <ul>
               <li class="features">Features</li>
               <ul class="inner-menu">
-                <li><img src="./images/icon-todo.svg" /> Todo List</li>
-                <li><img src="./images/icon-calendar.svg" /> Calendar</li>
-                <li><img src="./images/icon-reminders.svg" />Reminders</li>
-                <li><img src="./images/icon-planning.svg" /> Planning</li>
+                <li>
+                  <a href="#"><img src="./images/icon-todo.svg" /> Todo List</a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img src="./images/icon-calendar.svg" /> Calendar</a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><img src="./images/icon-reminders.svg" />Reminders</a
+                  >
+                </li>
+                <li>
+                  <a href="#"><img src="./images/icon-planning.svg" /></a>
+                  Planning
+                </li>
               </ul>
               <li class="company">Company</li>
               <ul class="inner-menu">
