proper semantic for nested list

--- a/index.html
+++ b/index.html
@@ -35,31 +35,37 @@
             />
             <ul>
               <li class="features">Features</li>
-              <ul class="inner-menu">
-                <li>
-                  <a href="#"><img src="./images/icon-todo.svg" /> Todo List</a>
-                </li>
-                <li>
-                  <a href="#"
-                    ><img src="./images/icon-calendar.svg" /> Calendar</a
-                  >
-                </li>
-                <li>
-                  <a href="#"
-                    ><img src="./images/icon-reminders.svg" />Reminders</a
-                  >
-                </li>
-                <li>
-                  <a href="#"><img src="./images/icon-planning.svg" /></a>
-                  Planning
-                </li>
-              </ul>
+              <li class="inner-menu">
+                <ul>
+                  <li>
+                    <a href="#"
+                      ><img src="./images/icon-todo.svg" /> Todo List</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#"
+                      ><img src="./images/icon-calendar.svg" /> Calendar</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#"
+                      ><img src="./images/icon-reminders.svg" />Reminders</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#"><img src="./images/icon-planning.svg" /></a>
+                    Planning
+                  </li>
+                </ul>
+              </li>
               <li class="company">Company</li>
-              <ul class="inner-menu">
-                <li>History</li>
-                <li>Our Team</li>
-                <li>Blog</li>
-              </ul>
+              <li class="inner-menu">
+                <ul>
+                  <li>History</li>
+                  <li>Our Team</li>
+                  <li>Blog</li>
+                </ul>
+              </li>
               <li>Careers</li>
               <li>About</li>
               <div>
