added alt attribute to images

--- a/index.html
+++ b/index.html
@@ -39,21 +39,40 @@
                 <ul>
                   <li>
                     <a href="#"
-                      ><img src="./images/icon-todo.svg" /> Todo List</a
+                      ><img
+                        src="./images/icon-todo.svg"
+                        alt=""
+                        aria-hidden="true"
+                      />
+                      Todo List</a
                     >
                   </li>
                   <li>
                     <a href="#"
-                      ><img src="./images/icon-calendar.svg" /> Calendar</a
+                      ><img
+                        src="./images/icon-calendar.svg"
+                        alt=""
+                        aria-hidden="true"
+                      />
+                      Calendar</a
                     >
                   </li>
                   <li>
                     <a href="#"
-                      ><img src="./images/icon-reminders.svg" />Reminders</a
+                      ><img
+                        src="./images/icon-reminders.svg"
+                        alt=""
+                        aria-hidden="true"
+                      />Reminders</a
                     >
                   </li>
                   <li>
-                    <a href="#"><img src="./images/icon-planning.svg" /></a>
+                    <a href="#"
+                      ><img
+                        src="./images/icon-planning.svg"
+                        alt=""
+                        aria-hidden="true"
+                    /></a>
                     Planning
                   </li>
                 </ul>
