--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
               </li>
               <li>Careers</li>
               <li>About</li>
-              <div>
+              <li class="auth">
                 <ul>
                   <li>Login</li>
                   <li>Register</li>
                 </ul>
-              </div>
+              </li>
             </ul>
           </div>
         </div>
